All_Component_DX/force-app/main/default/objects/SPM_Contract_Up_Time__c/SPM_Contract_Up_Time__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Holds the up-time details of the IB under active contracts.</description>
    <label>SPM - Contract Up Time</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM - Contract Up Time</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>