All_Component_DX/force-app/main/default/objects/SPM_Contract_Up_Time__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SPM_Up_Time_Details</relationshipName>
    <type>Lookup</type>
</CustomField>