All_Component_DX/force-app/main/default/objects/SPM_Contract_Up_Time__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Service/Maintenance Contract.</description>
    <label>Contract</label>
    <referenceTo>Service_Contract__c</referenceTo>
    <relationshipName>SPM_Up_Time_Details</relationshipName>
    <type>Lookup</type>
</CustomField>