All_Component_DX/force-app/main/default/objects/SPM_Contract_Up_Time__c/fields/Gauranteed_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>Gauranteed_Up_Time__c</fullName>
    <label>Gauranteed Up Time (In Mins)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>