All_Component_DX/force-app/main/default/objects/SPM_Contract_Up_Time__c/fields/Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installed Product</label>
    <referenceTo>Installed_Product__c</referenceTo>
    <relationshipName>SPM_Up_Time_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>