All_Component_DX/force-app/main/default/objects/SPM_Contract_Up_Time__c/fields/Total_Down_Time_During_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Total_Down_Time_During_Maintenance__c</fullName>
    <label>Total Down Time During Maintenance</label>
    <summarizedField>SPM_Down_Time_Detail__c.Down_Time__c</summarizedField>
    <summaryFilterItems>
        <field>SPM_Down_Time_Detail__c.Is_PM_Work_Order__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SPM_Down_Time_Detail__c.Up_Time_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>