All_Component_DX/force-app/main/default/objects/SPM_Contract_Up_Time__c/fields/Up_Time__c.field-meta.xml
<CustomField>
    <fullName>Up_Time__c</fullName>
    <formula>( Gauranteed_Up_Time__c  -  Total_Down_Time__c ) /  Gauranteed_Up_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Up Time % (Including Maintenance)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>